# openvr-northstar

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  README.md  build.bat  configure_osx.sh  linux.sh  macos.sh
driver/: CMakeLists.txt  deformation_northstar.cpp  deformation_northstar.h  dllmain.cpp  driver_northstar.cpp  driver_northstar.h  driver_sample.cpp  driverlog.cpp  driverlog_northstar.h  utility_northstar.h  watchdog_northstar.cpp  watchdog_northstar.h
driver/resources/: driver.vrdrivermanifest
driver/resources/resources/settings/: default.vrsettings
launcher/: App.config  App.xaml  App.xaml.cs  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs  NorthstarLauncher.csproj  packages.config  steamvrconfig.json
launcher/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
